syntax = "proto3";

package getProposal;

message GetProposalRequest {
    shared.Headers headers = 1;
}

message GetProposalResponse {
	shared.Headers headers = 1;
    string proposal = 2;
}
